--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
     "@kinde/infrastructure": "^0.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "^19.0.8",
+    "typescript": "^5.7.3"
   }
 }
